# Giraffe

./: Cargo.toml  NOTKI.md  README.md
assets/: assets_from_internet
src/: arena.rs  camera.rs  circular.rs  cursor.rs  giraffe.rs  head.rs  in_air.rs  main.rs  neck.rs  on_floor.rs  platform.rs  platform_spawner.rs  shooting_head.rs
src/assets/: ż☻yrafa.kra
src/parallax/: mod.rs
